
install(FILES vlneval/struct/VarDict.h
              vlneval/struct/VLNEnergy.h
         DESTINATION include/vlneval/struct)
install(FILES vlneval/tf_model/ModelConfig.h
         DESTINATION include/vlneval/tf_model)
install(FILES vlneval/zoo/VLNEnergyModel.h
         DESTINATION include/vlneval/zoo)

